Make it a fixed width layout, 1024px Apply boxed layout colors for backgrounds Style the footer Apply wide padding on main copy area Fix the hero image to be a little darker so the white text is readable

--- a/main.css
+++ b/main.css
@@ -1,6 +1,22 @@
-body { margin:0; padding:0; width:100%; position:relative; }
+body { margin:0 auto; padding:0; width:1024px; position:relative; background-color:#dddddd; }
+div.wrapper { background-color:white; width:100%; }
 
-ul.nav { list-style: none; margin:4px 8px; padding:0; }
+/* Navigation */
+ul.nav { list-style: none; margin:0 8px 4px 8px; padding:4px 0 0 0; }
 ul.nav li { display:inline-block; }
 ul.nav li a { text-decoration: none; color:#999999; font-size:12px; margin-right: 10px; font-weight:bold; }
 ul.nav li a.active { color:#333333; }
+
+/* Hero banner */
+.hero { background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),url('assets/background.jpg'); 
+	height:300px; background-size:cover; background-position:center; }
+.hero .overlay { padding-top:120px; color:white; }
+.hero .overlay p { text-align: center; color:white; font-size:2em; line-height:1em; margin:0; }
+
+/* Main copy */
+.copy { padding:20px 140px 10px; }
+
+/* Footer */
+.footer { text-align:center; background:#333333; color:#999999; font-size:0.7em; padding:12px; }
+.footer a { color:#dddddd; }
+.footer p { margin:0; }
